--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 .page {
   color: var(--text-color, #353430);
   font-family: var(--font-family, 'IBM Plex Mono', monospace);
@@ -9,5 +8,22 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  
+}
+.header{
+  display: flex;
+  flex-direction: column;
+}
+.header__theme-menu-list{
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  margin-block-start: var(--nav-bar-margin-top);
+  border-inline-end: var(--nav-bar-margin-right);/*!!!IT DOESN't WORK*/
+  gap: 10px;
+  list-style-type: none;
+  background-color: red;
+}
+.header__theme-menu-item{
+  width: 70px;
+  height: 26px;
 }
