--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,9 @@
   --font-size: 18px;
   --line-height: 23.4px;
   --background-color: #FFF1F7;
+  --nav-bar-margin-top: 75px;
+  --nav-bar-margin-right: 10px;
 
 }
+
 
