--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,6 +8,14 @@
   --nav-bar-margin-right: 10px;
   --paragraph-margin: 55px;
 
+
+  /* --text-color: #353430;
+  --font-family: IBM Plex Mono, monospace ;
+  --font-size: 18px;
+  --line-height: 23.4px;
+  --background-color: #FFF1F7;
+ */
+
 }
 
 
