--- a/styles/style.css
+++ b/styles/style.css
@@ -1,36 +1,129 @@
 .page {
-  color: var(--text-color, #353430);
-  font-family: var(--font-family, 'IBM Plex Mono', monospace);
-  font-size: var(--font-size, 18px);
-  line-height: var(--line-height,23.4px);
-  background-color: var(--background-color,  #FFF1F7);
-  background-image: url(../images/cover-image-light.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+    font-family: var(--font-family, 'IBM Plex Mono', monospace);
+    min-inline-size: 375px;
+    background: var(--backgroud-image);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+
 }
+
 .header{
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 40px;
+    position: relative;
+    display: grid;
+    grid-template-rows: 1fr min-content 1fr;
+    align-items: center;
+    padding-block: 10px;
+    block-size: 100vh;
+    min-block-size: 668px;
+}
+
+.decorated-zone::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 1px solid var(--decor-color);
+    border-bottom: 0;
+    border-left: 0;
+    inline-size: 25px;
+    block-size: 25px;
+}
+
+.decorated-zone::before {
+    content: "";
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    border: 1px solid var(--decor-color);
+    border-top: 0;
+    border-right: 0;
+    inline-size: 25px;
+    block-size: 25px;
+}
+
+.header__theme-menu {
+    justify-self: end;
 } 
 
-.header__theme-menu-list{
-  display: flex;
-  align-items: flex-end;
-  flex-direction: column;
-  margin-block-start: var(--nav-bar-margin-top);
-  border-inline-end: var(--nav-bar-margin-right);
-  gap: 10px;
-  background-color: red;
-} 
+.header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+  
 
-/* .header__theme-menu-item{
-  width: 70px;
-  height: 26px;
-} */
+.header__theme-menu-button{
+    border: none;
+    background-color: inherit;
+    color: var(--decor-color);
+    font-size: 18px;
+    line-height: 18px;
+    font-family: IBM Plex Mono;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: center;
+    text-transform: lowercase;
+    cursor: pointer;
+}
 
-.header-paragraph{
-  margin-block-start: var(--paragraph-margin);
+.header__theme-menu-button_type_light {
+    cursor: pointer;
+  }
+  
+  .header__theme-menu-button_active {
+    border: 1px solid var(--decor-color);
+    pointer-events: none;
+  }
+  
+  .header__theme-menu-button_type_auto {
+    cursor: pointer;
+  }
+  
+  .header__theme-menu-button_type_dark {
+    cursor: pointer;
+  }
+
+
+
+
+.header-rec {
+    color: var(--decor-color);
+    font-size: 1.15em;
+    line-height: 25px;
+}
+  
+.header-rec::after {
+    content: "REC";
+    position: absolute;
+    top: 10px;
+    right: 38px;
+  }
+  
+  .header-rec::before {
+    content: "";
+    position: absolute;
+    top: 17px;
+    right: 18px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 4px 2px var(--background-accent-color);
+    background-color: var(--background-accent-color);
+    inline-size: 10px;
+    block-size: 10px;
+  }
+  
+
+
+
+
+
+.header-paragraph {
+    color: var(--accent-text-color);
+    font-weight: var(--font-weight-bold);
+    font-size: 18px;
+    line-height: 23.4px;
+    background-color: var(--background-accent-color);
 }
 
