--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .page {
-    font-family: var(--font-family, 'IBM Plex Mono', monospace);
+    font-family: var(--font-family, monospace);
     min-inline-size: 375px;
     background: var(--backgroud-image);
     background-repeat: no-repeat;
@@ -17,6 +17,8 @@
     padding-block: 10px;
     block-size: 100vh;
     min-block-size: 668px;
+
+    
 }
 
 .decorated-zone::after {
@@ -67,6 +69,33 @@
     text-align: center;
     text-transform: lowercase;
     cursor: pointer;
+
+    
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--hover-opacity);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--decor-color);
+  outline: none;
+}
+
+.text-link:hover {
+  text-decoration: underline;
+}
+
+.text-link:focus {
+  outline: none;
+}
+
+.text-link:focus-visible {
+  outline: 1px solid var(--main-text-color);
 }
 
 .header__theme-menu-button_type_light {
@@ -85,8 +114,6 @@
   .header__theme-menu-button_type_dark {
     cursor: pointer;
   }
-
-
 
 
 .header-rec {
@@ -113,17 +140,214 @@
     inline-size: 10px;
     block-size: 10px;
   }
+
+  .title{
+    color: var(--text-shadow);
+    font-weight: var(--font-weight-bold);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 95.7px;
+    text-align: left;
+    text-shadow: 4px 4px 0px var(--background-accent-color);
+    
+  }
   
+ .header-decor {
+    justify-self: center;
+    align-self: flex-start;
+    max-inline-size: 355px;
+ }
 
-
-
-
-
-.header-paragraph {
+ .title-decor {
     color: var(--accent-text-color);
     font-weight: var(--font-weight-bold);
     font-size: 18px;
     line-height: 23.4px;
     background-color: var(--background-accent-color);
-}
+  }
+
+  .main {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 50px;
+    padding: 40px;
+  }
+
+  .main-section {
+    display: grid;
+    gap: 20px;
+  }
+
+
+  .section-title {
+    color: var(--decor-color);
+    font-weight: var(--font-weight-bold);
+    font-size: 18px;
+    line-height: 23.4px;
+  }
+
+  .article-list {
+    display: grid;
+    gap: 20px;
+  } 
+
+  .article-list-item {
+    display: grid;
+    gap: 10px;
+  }
+
+  .article-paragraph {
+    color: var(--main-text-color);
+    font-weight: var(--font-weight-normal);
+    font-size: 18px;
+    line-height: 23.4px;
+  }
+
+  .text-link {
+    text-decoration: none;
+    text-shadow: 2px 0px 0px var(--background-accent-color);
+  }
+
+  .wrapper-section {
+    display: grid;
+    gap: 20px;
+  }
+
+  .section-article-title {
+    font-weight: var(--font-weight-normal);
+  }
+
+  .section-gallery {
+    display: grid;
+    gap: 10px;
+    padding-block-end: 40px;
+  }
+
+  .gallery-list {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-item-image {
+    display: block;
+    max-inline-size: 100%;
+    block-size: 100%;
+    inline-size: 100%;
+    object-fit: cover;
+  }
+
+
+  .footer {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-block-size: 667px;
+    block-size: 100vh;
+  }
+
+  @media (width >= 768px) {
+
+    .header {
+      grid-template-rows: 28% 27% 42.4%;
+      min-block-size: 1024px;
+      block-size: 100vh;
+    }
+  
+    .decorated-zone::after {
+      top: 20px;
+      right: 20px;
+    }
+  
+    .decorated-zone::before {
+      bottom: 20px;
+      left: 20px;
+    }
+  
+    .header-rec::after {
+      top: 20px;
+      right: 48px;
+    }
+  
+    .header-rec::before {
+      top: 27px;
+      right: 27px;
+    }
+    .header__theme-menu {
+      align-self: flex-end;
+    }
+  
+    .header__theme-menu-list {
+      padding-inline-end: 20px;
+    }
+  
+    .header-title {
+      padding-inline-start: 0;
+      align-self: flex-end;
+    }
+  
+    .title {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+  
+    .header-decor {
+      justify-self: end;
+      align-self: center;
+      margin-inline-end: 20px;
+      max-inline-size: 364px;
+    }
+  
+    .main {
+      gap: 80px;
+      padding: 60px 20px 0;
+    }
+  
+    .main-section {
+      grid-template-columns: 1fr 2fr;
+    }
+  
+    .content .section-title {
+      max-inline-size: 236px;
+    }
+  
+    .content {
+      grid-template-columns: 1fr;
+    }
+  
+    .section-gallery {
+      gap: 20px;
+      padding-block-end: 59px;
+    }
+  
+    .gallery-list {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: 192px 230px 318px;
+      gap: 20px;
+    }
+  
+    .gallery-list-item:nth-child(1) {
+      grid-column: 1/3;
+    }
+  
+    .gallery-list-item:nth-child(2) {
+      grid-column: 3/4;
+      grid-row: 1/3;
+    }
+  
+    .gallery-list-item:nth-child(3) {
+      grid-column: 1/2;
+      grid-row: 2/4;
+    }
+  
+    .gallery-list-item:nth-child(5) {
+      grid-column: 2/4;
+      grid-row: 3/4;
+    }
+  
+    .footer {
+      min-block-size: 1024px;
+      block-size: 100vh;
+    }
+  }
+
 
