--- a/styles/dark.css
+++ b/styles/dark.css
@@ -6,12 +6,12 @@
 
 :root.theme-dark {
   --backgroundg-main-color: #000028;
-  --background-accent-color: #FF0070;
-  --main-text-color: #F1B2CE;
+  --background-accent-color: #ff0070;
+  --main-text-color: #f1b2ce;
   --accent-text-color: #000028;
-  --hover-opacity:#FF007066;
-  --decor-color:#FF0070;
-  --text-shadow:#DB00FF;
+  --hover-opacity: #ff007066;
+  --decor-color: #ff0070;
+  --text-shadow: #db00ff;
   --backgroud-image: url(../images/cover-image-dark.png);
 }
 
@@ -20,15 +20,14 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  
   :root {
     --background-main-color: #000028;
-    --background-accent-color: #FF0070;
-    --main-text-color: #F1B2CE;
+    --background-accent-color: #ff0070;
+    --main-text-color: #f1b2ce;
     --accent-text-color: #000028;
-    --hover-opacity:#FF007066;
-    --decor-color:#FF0070;
-    --text-shadow:#DB00FF;
+    --hover-opacity: #ff007066;
+    --decor-color: #ff0070;
+    --text-shadow: #db00ff;
     --background-image: url(../images/cover-image-dark.png);
   }
 
