--- a/styles/style.css
+++ b/styles/style.css
@@ -1,76 +1,69 @@
 .page {
-    font-family: var(--font-family, monospace);
-    min-inline-size: 375px;
-    background: var(--backgroud-image);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-
+  font-family: var(--font-family, monospace);
+  min-inline-size: 375px;
+  background: var(--backgroud-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-.header{
-    position: relative;
-    display: grid;
-    grid-template-rows: 1fr min-content 1fr;
-    align-items: center;
-    padding-block: 10px;
-    block-size: 100vh;
-    min-block-size: 668px;
-
-    
+.header {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 36.3% 36.3% 27.3%;
+  gap: 1px;
+  min-block-size: 668px;
+  block-size: 100vh;
 }
 
 .decorated-zone::after {
-    content: "";
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border: 1px solid var(--decor-color);
-    border-bottom: 0;
-    border-left: 0;
-    inline-size: 25px;
-    block-size: 25px;
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: 1px solid var(--decor-color);
+  border-bottom: 0;
+  border-left: 0;
+  inline-size: 25px;
+  block-size: 25px;
 }
 
 .decorated-zone::before {
-    content: "";
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    border: 1px solid var(--decor-color);
-    border-top: 0;
-    border-right: 0;
-    inline-size: 25px;
-    block-size: 25px;
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  border: 1px solid var(--decor-color);
+  border-top: 0;
+  border-right: 0;
+  inline-size: 25px;
+  block-size: 25px;
 }
 
 .header__theme-menu {
-    justify-self: end;
-} 
+  grid-row: 1/2;
+  justify-self: end;
+  align-self: center;
+}
 
 .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+  padding-inline-end: 10px;
 }
-  
 
-.header__theme-menu-button{
-    border: none;
-    background-color: inherit;
-    color: var(--decor-color);
-    font-size: 18px;
-    line-height: 18px;
-    font-family: IBM Plex Mono;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 18px;
-    text-align: center;
-    text-transform: lowercase;
-    cursor: pointer;
-
-    
+.header__theme-menu-button {
+  border: none;
+  color: var(--decor-color);
+  font-size: 18px;
+  line-height: 18px;
+  text-transform: lowercase;
+  background-color: inherit;
+  inline-size: 70px;
+  block-size: 26px;
 }
 
 .header__theme-menu-button:hover {
@@ -99,255 +92,313 @@
 }
 
 .header__theme-menu-button_type_light {
-    cursor: pointer;
-  }
-  
-  .header__theme-menu-button_active {
-    border: 1px solid var(--decor-color);
-    pointer-events: none;
-  }
-  
-  .header__theme-menu-button_type_auto {
-    cursor: pointer;
-  }
-  
-  .header__theme-menu-button_type_dark {
-    cursor: pointer;
-  }
+  cursor: pointer;
+}
 
+.header__theme-menu-button_active {
+  border: 1px solid var(--decor-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button_type_auto {
+  cursor: pointer;
+}
+
+.header__theme-menu-button_type_dark {
+  cursor: pointer;
+}
 
 .header-rec {
-    color: var(--decor-color);
-    font-size: 1.15em;
-    line-height: 25px;
+  color: var(--decor-color);
+  font-size: 1.15em;
+  line-height: 25px;
 }
-  
+
 .header-rec::after {
-    content: "REC";
-    position: absolute;
-    top: 10px;
-    right: 38px;
-  }
-  
-  .header-rec::before {
-    content: "";
-    position: absolute;
-    top: 17px;
-    right: 18px;
-    border-radius: 50%;
-    box-shadow: 0px 0px 4px 2px var(--background-accent-color);
-    background-color: var(--background-accent-color);
-    inline-size: 10px;
-    block-size: 10px;
-  }
+  content: "REC";
+  position: absolute;
+  top: 10px;
+  right: 38px;
+}
 
-  .title{
-    color: var(--text-shadow);
-    font-weight: var(--font-weight-bold);
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    line-height: 95.7px;
-    text-align: left;
-    text-shadow: 4px 4px 0px var(--background-accent-color);
-    
-  }
-  
- .header-decor {
-    justify-self: center;
-    align-self: flex-start;
-    max-inline-size: 355px;
- }
+.header-rec::before {
+  content: "";
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 2px var(--background-accent-color);
+  background-color: var(--background-accent-color);
+  inline-size: 10px;
+  block-size: 10px;
+}
 
- .title-decor {
-    color: var(--accent-text-color);
-    font-weight: var(--font-weight-bold);
-    font-size: 18px;
-    line-height: 23.4px;
-    background-color: var(--background-accent-color);
-  }
+.title {
+  color: var(--text-shadow);
+  font-weight: var(--font-weight-bold);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 95.7px;
+  text-shadow: 4px 4px 0px var(--background-accent-color);
+}
 
-  .main {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 50px;
-    padding: 40px;
-  }
+.header-title {
+  grid-row: 2/3;
+  padding-inline-start: 10px;
+}
 
-  .main-section {
-    display: grid;
-    gap: 20px;
-  }
+.header-decor {
+  grid-row: 3/4;
+  justify-self: center;
+  align-self: flex-start;
+  max-inline-size: 355px;
+}
 
+.title-decor {
+  color: var(--accent-text-color);
+  font-weight: var(--font-weight-bold);
+  font-size: 18px;
+  line-height: 23.4px;
+  background-color: var(--background-accent-color);
+}
 
-  .section-title {
-    color: var(--decor-color);
-    font-weight: var(--font-weight-bold);
-    font-size: 18px;
-    line-height: 23.4px;
-  }
+.main {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 50px;
+  padding: 40px;
+}
 
-  .article-list {
-    display: grid;
-    gap: 20px;
-  } 
+.main-section {
+  display: grid;
+  gap: 20px;
+}
 
-  .article-list-item {
-    display: grid;
-    gap: 10px;
-  }
+.section-title {
+  color: var(--decor-color);
+  font-weight: var(--font-weight-bold);
+  font-size: 18px;
+  line-height: 23.4px;
+}
 
-  .article-paragraph {
-    color: var(--main-text-color);
-    font-weight: var(--font-weight-normal);
-    font-size: 18px;
-    line-height: 23.4px;
-  }
+.article-list {
+  display: grid;
+  gap: 20px;
+}
 
-  .text-link {
-    text-decoration: none;
-    text-shadow: 2px 0px 0px var(--background-accent-color);
-  }
+.article-list-item {
+  display: grid;
+  gap: 10px;
+}
 
-  .wrapper-section {
-    display: grid;
-    gap: 20px;
-  }
+.article-paragraph {
+  color: var(--main-text-color);
+  font-weight: var(--font-weight-normal);
+  font-size: 18px;
+  line-height: 23.4px;
+}
 
-  .section-article-title {
-    font-weight: var(--font-weight-normal);
-  }
+.text-link {
+  text-decoration: none;
+  text-shadow: 2px 0px 0px var(--background-accent-color);
+}
 
-  .section-gallery {
-    display: grid;
-    gap: 10px;
-    padding-block-end: 40px;
-  }
+.wrapper-section {
+  display: grid;
+  gap: 20px;
+}
 
-  .gallery-list {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 1fr;
-  }
+.section-article-title {
+  font-weight: var(--font-weight-normal);
+}
 
-  .gallery-item-image {
-    display: block;
-    max-inline-size: 100%;
-    block-size: 100%;
-    inline-size: 100%;
-    object-fit: cover;
-  }
+.section-gallery {
+  display: grid;
+  gap: 10px;
+  padding-block-end: 40px;
+}
 
+.gallery-list {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr;
+}
 
-  .footer {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-block-size: 667px;
+.gallery-item-image {
+  display: block;
+  max-inline-size: 100%;
+  block-size: 100%;
+  inline-size: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-block-size: 667px;
+  block-size: 100vh;
+}
+
+@media (width >= 768px) {
+  .header {
+    grid-template-rows: 28% 27% 42.4%;
+    min-block-size: 1024px;
     block-size: 100vh;
   }
 
-  @media (width >= 768px) {
-
-    .header {
-      grid-template-rows: 28% 27% 42.4%;
-      min-block-size: 1024px;
-      block-size: 100vh;
-    }
-  
-    .decorated-zone::after {
-      top: 20px;
-      right: 20px;
-    }
-  
-    .decorated-zone::before {
-      bottom: 20px;
-      left: 20px;
-    }
-  
-    .header-rec::after {
-      top: 20px;
-      right: 48px;
-    }
-  
-    .header-rec::before {
-      top: 27px;
-      right: 27px;
-    }
-    .header__theme-menu {
-      align-self: flex-end;
-    }
-  
-    .header__theme-menu-list {
-      padding-inline-end: 20px;
-    }
-  
-    .header-title {
-      padding-inline-start: 0;
-      align-self: flex-end;
-    }
-  
-    .title {
-      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-    }
-  
-    .header-decor {
-      justify-self: end;
-      align-self: center;
-      margin-inline-end: 20px;
-      max-inline-size: 364px;
-    }
-  
-    .main {
-      gap: 80px;
-      padding: 60px 20px 0;
-    }
-  
-    .main-section {
-      grid-template-columns: 1fr 2fr;
-    }
-  
-    .content .section-title {
-      max-inline-size: 236px;
-    }
-  
-    .content {
-      grid-template-columns: 1fr;
-    }
-  
-    .section-gallery {
-      gap: 20px;
-      padding-block-end: 59px;
-    }
-  
-    .gallery-list {
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: 192px 230px 318px;
-      gap: 20px;
-    }
-  
-    .gallery-list-item:nth-child(1) {
-      grid-column: 1/3;
-    }
-  
-    .gallery-list-item:nth-child(2) {
-      grid-column: 3/4;
-      grid-row: 1/3;
-    }
-  
-    .gallery-list-item:nth-child(3) {
-      grid-column: 1/2;
-      grid-row: 2/4;
-    }
-  
-    .gallery-list-item:nth-child(5) {
-      grid-column: 2/4;
-      grid-row: 3/4;
-    }
-  
-    .footer {
-      min-block-size: 1024px;
-      block-size: 100vh;
-    }
+  .decorated-zone::after {
+    top: 20px;
+    right: 20px;
   }
+
+  .decorated-zone::before {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .header-rec::after {
+    top: 20px;
+    right: 48px;
+  }
+
+  .header-rec::before {
+    top: 27px;
+    right: 27px;
+  }
+  .header__theme-menu {
+    align-self: flex-end;
+  }
+
+  .header__theme-menu-list {
+    padding-inline-end: 20px;
+  }
+
+  .header-title {
+    padding-inline-start: 0;
+    align-self: flex-end;
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header-decor {
+    justify-self: end;
+    align-self: center;
+    margin-inline-end: 20px;
+    max-inline-size: 364px;
+  }
+
+  .main {
+    gap: 80px;
+    padding: 60px 20px 0;
+  }
+
+  .main-section {
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .content .section-title {
+    max-inline-size: 236px;
+  }
+
+  .content {
+    grid-template-columns: 1fr;
+  }
+
+  .section-gallery {
+    gap: 20px;
+    padding-block-end: 59px;
+  }
+
+  .gallery-list {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 192px 230px 318px;
+    gap: 20px;
+  }
+
+  .gallery-list-item:nth-child(1) {
+    grid-column: 1/3;
+  }
+
+  .gallery-list-item:nth-child(2) {
+    grid-column: 3/4;
+    grid-row: 1/3;
+  }
+
+  .gallery-list-item:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 2/4;
+  }
+
+  .gallery-list-item:nth-child(5) {
+    grid-column: 2/4;
+    grid-row: 3/4;
+  }
+
+  .footer {
+    min-block-size: 1024px;
+    block-size: 100vh;
+  }
+}
+
+@media (width >= 1024px) {
+  .page {
+    max-inline-size: 1024px;
+  }
+
+  .header {
+    grid-template-rows: 44.3% 29% 26.3%;
+    min-block-size: 768px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    padding-block-start: 20px;
+    padding-inline-end: 0;
+  }
+  .header-title {
+    align-self: flex-start;
+  }
+  .header-decor {
+    max-inline-size: 490px;
+    align-self: flex-start;
+  }
+
+  .section-text {
+    gap: 10px;
+  }
+
+  .content .section-title {
+    max-inline-size: 315px;
+  }
+
+  .content {
+    gap: 20px;
+  }
+
+  .content .article-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .article-list-item {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content 1fr;
+  }
+
+  .gallery-list {
+    grid-template-rows: 260px 315px 433px;
+  }
+
+  .footer {
+    min-block-size: 768px;
+  }
+}
 
 
