--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 .page {
   font-family: var(--font-family, monospace);
   min-inline-size: 375px;
-  background: var(--backgroud-image);
+  background: var(--background-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -15,7 +15,6 @@
   grid-template-rows: 36.3% 36.3% 27.3%;
   gap: 1px;
   min-block-size: 668px;
-  block-size: 100vh;
 }
 
 .decorated-zone::after {
@@ -75,12 +74,12 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  border-bottom: 1px solid var(--decor-color);
+  border-bottom: 1px solid currentColor;
   outline: none;
 }
 
 .text-link:hover {
-  text-decoration: underline;
+  border-bottom: 1px var(--main-text-color) solid;
 }
 
 .text-link:focus {
@@ -91,19 +90,13 @@
   outline: 1px solid var(--main-text-color);
 }
 
-.header__theme-menu-button_type_light {
-  cursor: pointer;
-}
-
 .header__theme-menu-button_active {
   border: 1px solid var(--decor-color);
   pointer-events: none;
 }
 
-.header__theme-menu-button_type_auto {
-  cursor: pointer;
-}
-
+.header__theme-menu-button_type_light,
+.header__theme-menu-button_type_auto,
 .header__theme-menu-button_type_dark {
   cursor: pointer;
 }
@@ -237,7 +230,6 @@
   justify-content: center;
   align-items: center;
   min-block-size: 667px;
-  block-size: 100vh;
 }
 
 @media (width >= 768px) {
