--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,12 @@
   font-family: var(--font-family, monospace);
   min-inline-size: 375px;
   background-color: var(--background-main-color);
+  background-image: var(--background-image);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  
 }
 
 .header {
@@ -14,12 +16,10 @@
   grid-template-columns: 1fr;
   grid-template-rows: 36.3% 36.3% 27.3%;
   gap: 1px;
-  background-image: var(--background-image);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   min-block-size: 668px;
   block-size: 100vh;
+  background-color: yellow;
+
 }
 
 .decorated-zone::after {
@@ -151,14 +151,16 @@
   font-weight: var(--font-weight-bold);
   font-size: 18px;
   line-height: 23.4px;
-  background-color: var(--background-accent-color);
+  background-color: var(--background-accent-color); 
 }
 
 .main {
   display: grid;
   grid-template-columns: 1fr;
   gap: 50px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color:blue;
 }
 
 .main-section {
@@ -231,6 +233,15 @@
   align-items: center;
   min-block-size: 667px;
   block-size: 100vh;
+  background-color: green;
+}
+
+
+
+@media (width < 768px){
+  .header{
+  margin-bottom: 40px;
+  }
 }
 
 @media (width >= 768px) {
@@ -367,7 +378,7 @@
   }
 
   .content .section-title {
-    max-inline-size: 315px;
+    max-inline-size: 320px;
   }
 
   .content {
@@ -391,3 +402,4 @@
     min-block-size: 768px;
   }
 }
+
